fix wrapping on content

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 
 .content {
   font-size: 18px;
+  word-break: break-word;
 }
 
 @media (min-width: 768px) {
